--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <title>HTML Images</title>
 </head>
 <body>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="roaring lion">
+
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="roaring lion" title="Sunday Scaries">
 
 </body>
 </html>
