--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="BORED!" title ="Lion">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="YES!" title ="NO">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="DONE" title ="NONPE">
 </body>
 </html>
